--- a/web.html
+++ b/web.html
@@ -32,18 +32,18 @@
                       <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Services</a>
+                      <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Blog</a>
+                      <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">pages</a>
+                      <a class="nav-link" href="#work">Work</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Contact</a>
+                      <a class="nav-link" href="#contact">Contact</a>
                     <li class="nav-item">
-                      <a class="btn btn-success" href="#">Hire Me</a>
+                      <a class="btn btn-success" href="#about">Hire Me</a>
                     </li>
                   </ul>
                 </div>
@@ -117,7 +117,7 @@
      </section>
 
     <!-- This is the section with services -->
-      <section class="services py-5">
+      <section class="services py-5" id = "services">
         <div class="container">
           <h2 class="text-center mb-5">My Services</h2>
           <div class="row">
@@ -151,7 +151,7 @@
       </section>
 
     <!-- This is the section with the skills-->
-     <section class = "skills py-5">
+     <section class = "skills py-5" id = "skills">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -311,7 +311,7 @@
          </section>
 
         <!-- This is the section with the success work -->
-          <section class="success-work py-5">
+          <section class="success-work py-5" id = "work">
             <div class="container">
               <h2 class="text-center mb-5">My Success Work</h2>
               <div class="row">
@@ -358,7 +358,7 @@
           </section>
 
           <!-- This is the section with the contact form -->
-          <section class="contact py-10">
+          <section class="contact py-10" id = "contact">
             <div class="container text-center ">
               <div class="UI py-5  d-flex justify-content-center align-items-center" style = "color: aliceblue;">
                 <i class="fas fa-laptop-code fa- "></i> UI Portfolio
